# TurkishSentiNet-C

./: CMakeLists.txt  README.md  conanfile.py
Test/: SentiLiteralNetTest.c  SentiNetTest.c
src/: CMakeLists.txt  PolarityType.c  PolarityType.h  SentiLiteral.c  SentiLiteral.h  SentiLiteralNet.c  SentiLiteralNet.h  SentiNet.c  SentiNet.h  SentiSynSet.c  SentiSynSet.h
